implementacion de casi 200 mutaciones